# lomiri-url-dispatcher

./: CMakeLists.txt  ChangeLog  NEWS
data/: CMakeLists.txt  bad-url.qml  com.lomiri.URLDispatcher.xml
debian/: changelog  control  copyright  copyright.in  liblomiri-url-dispatcher-dev.install  liblomiri-url-dispatcher0.install  liblomiri-url-dispatcher0.symbols  lomiri-url-dispatcher-testability.install  lomiri-url-dispatcher-tools-gui.install  lomiri-url-dispatcher-tools-gui.lintian-overrides  lomiri-url-dispatcher-tools.install  lomiri-url-dispatcher-tools.lintian-overrides  lomiri-url-dispatcher.install  lomiri-url-dispatcher.lintian-overrides  rules  watch
debian/apparmor/: lomiri-url-dispatcher-bad-url-helper
debian/patches/: 0001_Fix-compile-error-with-new-glib-versions.patch  0002_Fix-generic-URL-regex.patch  1001_fix-runtime-error-fftbfs.patch  series
debian/upstream/: metadata
gui/: CMakeLists.txt  lomiri-url-dispatcher-gui.desktop.in  lomiri-url-dispatcher-gui.qml
liblomiri-url-dispatcher/: CMakeLists.txt  lomiri-url-dispatcher.c  lomiri-url-dispatcher.h  lomiri-url-dispatcher.pc.in
service/: CMakeLists.txt  dispatcher.c  overlay-tracker-mir.cpp  url-db.c  url-db.h
service/bad-url/: CMakeLists.txt  exec-tool.cpp
service/url-overlay/: CMakeLists.txt  exec-tool.c
tests/: CMakeLists.txt  directory-update-test.cc  dispatcher-test.cc  lib-test-no-main.c  lib-test.cc  lomiri-app-launch-mock.c  lomiri-app-launch-mock.h  overlay-tracker-test.cpp  service-test.cc  systemd-mock.h  test-config.h.in  url-db-test.cc
tests/url_dispatcher_testability/: CMakeLists.txt  fake_dispatcher.py  test_fake_dispatcher.py.in
tools/: CMakeLists.txt  url-dispatcher.cpp
